# QtPocketBase

./: .qmlls.ini  CMakeLists.txt  Collection.qml  LICENSE  README.md
src/: CollectionFieldOptions.cpp  CollectionFieldOptions.h  CollectionFileFieldOptions.cpp  CollectionFileFieldOptions.h  CollectionSubscriber.cpp  CollectionSubscriber.h  CollectionTextFieldOptions.cpp  CollectionTextFieldOptions.h  PocketBase.hpp  PocketBaseClient.cpp  PocketBaseClient.h  PocketBaseCollection.cpp  PocketBaseCollection.h  PocketBaseCollectionField.cpp  PocketBaseCollectionField.h  PocketBaseCollectionPromise.cpp  PocketBaseCollectionPromise.h  PocketBaseCollectionSchema.cpp  PocketBaseCollectionSchema.h  PocketBaseServer.cpp  PocketBaseServer.h  PocketBaseSettings.cpp  PocketBaseSettings.h  PocketRequest.cpp  PocketRequest.cpp.yriQTU  PocketRequest.h  PocketUtility.cpp  PocketUtility.h  pocketnetworkmanager.cpp  pocketnetworkmanager.h
test/: CMakeLists.txt
